# CodeFission

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  icon-preview.html  pyproject.toml  requirements.txt  run.sh
agentbridge/: README.md  pyproject.toml
agentbridge/agentbridge/: __init__.py  __main__.py  base.py  context.py  events.py  pricing.py  session_manager.py  subprocess_runner.py  types.py
agentbridge/agentbridge/adapters/: __init__.py  claude.py  codex.py
agentbridge/tests/: test_adapters.py  test_cross_provider.py  test_events.py  test_pricing.py  test_session_manager.py  test_types.py
backend/: chat_service.py  config.py  db.py  events.py  handlers.py  main.py  models.py  providers.py  sandbox_exec.py  tree_service.py
backend/providers/: __init__.py  openai_provider.py
backend/services/: _process_darwin.py  _process_linux.py  _sandbox_linux.py  chat_service.py  orchestrator.py  process_service.py  sandbox.py  summary_service.py  tree_service.py  workspace_service.py
backend/tests/: conftest.py  test_cancel.py  test_orchestrator.py  test_process_service.py  test_workspace_service.py
codefission/: __main__.py  cli.py  config.py  db.py  events.py  handlers.py  main.py  models.py  providers.py  server.py
codefission/agentbridge/: __init__.py  discovery.py  events.py  pricing.py  session_manager.py  subprocess_runner.py  types.py
codefission/agentbridge/adapters/: claude.py  codex.py
codefission/electron/: main.js  package.json
codefission/handlers/: __init__.py  chat.py  chat_handlers.py  connection.py  file_handlers.py  files.py  node_handlers.py  nodes.py  process_handlers.py  processes.py  repo.py  repo_handlers.py  settings.py  settings_handlers.py  tree_handlers.py  trees.py  uploads.py
codefission/orchestrator/: __init__.py  chat.py  core.py  files.py  nodes.py  processes.py  repo.py  settings.py  trees.py
codefission/providers/: __init__.py  anthropic_provider.py  base.py
codefission/services/: actions.py  chat.py  chat_service.py  orchestrator.py  summary_service.py  tree_service.py  trees.py  types.py  workspace.py  workspace_service.py
codefission/services/orchestrator/: __init__.py  chat.py  core.py  files.py  nodes.py  repo.py  settings.py  trees.py  types.py
codefission/store/: __init__.py  actions.py  ai.py  git.py  processes.py  settings.py  summary.py  trees.py
codefission/tests/: conftest.py  test_ab_adapters.py  test_ab_context.py  test_ab_session_manager.py  test_ab_types.py  test_actions.py  test_branch_session_bug.py  test_chat_service.py  test_cli.py  test_db.py  test_e2e_cli.py  test_eventbus.py  test_models.py  test_node_provider.py  test_open_repo.py  test_orchestrator.py  test_orchestrator_chat.py  test_orchestrator_ops.py  test_phase1.py  test_plant_tree.py  test_plant_tree_bug.py  test_plant_tree_handler.py  test_planted_tree_runtime_bugs.py  test_process_service.py  test_project_creation.py  test_rest_api.py  test_sandbox.py  test_session_continuity.py  test_sidebar.py  test_tree_service.py  test_workspace_service.py
docs/: backend-rewrite-plan.md  ephemeral-worktrees.md  test-plan.md  ux-refinements-plan.md
docs/dev/: architecture-review.md  bugs.md  demo-video.md  front_end_logic.md  git-branch-tracking-bug.md  mount-namespace-workspace.md  release.md  thoughts.md
docs/dev/learn/: dev-pipeline.md
electron/: icon.icns  main.js  package-lock.json  package.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  dag.test.ts  fileAttach.ts  layout.test.ts  layout.ts  renderMarkdown.ts  store.ts  ws.ts
frontend/src/components/: Canvas.tsx  ChatPanel.tsx  FilesPanel.tsx  NodeModal.tsx  QuoteBrowser.tsx  SettingsPanel.tsx  ToolCallLine.tsx  TreeList.tsx  (+1 more)
scripts/: gen_icons.py  gen_logo.py  make_macos_app.sh
tests/: conftest.py  test_chat_service.py  test_db.py  test_events.py  test_generator_cleanup.py  test_models.py  test_tree_service.py  test_workspace_service.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  dag.test.ts  fileAttach.ts  layout.test.ts  layout.ts  store.ts  ws.ts
(+8 files in other folders)
