[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentbridge"
version = "0.1.0"
description = "Unified async interface for AI coding CLI tools (Claude Code, Codex CLI)"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
agentbridge = "agentbridge.__main__:main_sync"

[tool.hatch.build.targets.wheel]
packages = ["agentbridge"]
